<resources>
    <string name="app_name">体育馆预约系统</string>
    <string name="operate">预约时段7-22</string>
    <string name="action_settings">Settings</string>
    <string name="booked_operate">提示</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_password_hint_2">再次输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入邮箱&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">邮箱 </string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">账号</string>
    <string name="add_money">钱包</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">邮箱</string>
    <string name="blacklist">黑名单</string>

    <string name="change_name">新的用户名</string>
    <string name="change_email">新的用户邮箱</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>

    <string name="edit_data">编辑资料</string>
    <string name="edit_password">修改密码</string>


    <string name="note">通知</string>
    <string name="goto_book">预约</string>
    <string name="goto_recharge">充值</string>
    <string name="goto_userdata">个人信息</string>
    <string name="goto_chat">聊天室</string>

    <string name="chat">发言</string>


    <string name="recharge_money">充值金额：</string>
    <string name="recharge_btn">充值</string>
    <string name="btn_recharge_hint">数字类型</string>
    <string name="find">查询</string>

    <string name="book_btn">预约</string>
    <string name="booked_btn">已约</string>
    <string name="type_btn">分类</string>
    <string name="dayz_btn">日段</string>

    <string name="user_money">我的钱包:</string>




</resources>
