<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/user_money"
            android:textStyle="bold"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/textview_recharge_money"
            style="@style/Smile_TextView_Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>


    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/recharge_money"
            android:textStyle="bold"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/et_recharge_money"
            style="@style/Register_Edit"
            android:inputType="number"
            android:hint="@string/btn_recharge_hint" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_recharge_ok"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/recharge_btn"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>