<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >


    <com.example.rain.bmobtest2.TipView
        android:id="@+id/tip_view"
        android:background="#FFE4B5"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/goto_book"
            style="@style/Smile_Button_theme"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="@dimen/btn_choose_text"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/btn_choose"
            android:text="@string/goto_book" />


        <Button
            android:id="@+id/goto_recharge"
            style="@style/Smile_Button_theme"
            android:layout_width="match_parent"
            android:textSize="@dimen/btn_choose_text"
            android:layout_height="45dp"
            android:layout_below="@+id/goto_book"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/btn_choose"
            android:text="@string/goto_recharge"/>

        <Button
            android:id="@+id/goto_chat"
            style="@style/Smile_Button_theme"
            android:layout_width="match_parent"
            android:textSize="@dimen/btn_choose_text"
            android:layout_height="45dp"
            android:layout_below="@+id/goto_recharge"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/btn_choose"
            android:text="@string/goto_chat"/>


        <Button
        android:id="@+id/goto_userdata"
        style="@style/Smile_Button_logout"
        android:layout_width="match_parent"
        android:textSize="@dimen/btn_choose_text"
        android:layout_height="45dp"
        android:layout_below="@+id/goto_chat"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/btn_choose_2"
        android:text="@string/goto_userdata" />


        <Button
            android:id="@+id/goto_test"
            style="@style/Smile_Button_logout"
            android:layout_width="match_parent"
            android:textSize="@dimen/btn_choose_text"
            android:layout_height="45dp"
            android:layout_below="@+id/goto_userdata"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/btn_choose"
            android:text="test" />


    </RelativeLayout>



</LinearLayout>