<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ImageView_set_head"
                style="@style/Smile_ImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                android:src="@drawable/head" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_set_nick"
                style="@style/Smile_TextView_Black"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_set_money"
            style="@style/Smile_TextView_Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_set_email"
                style="@style/Smile_TextView_Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_edit_data"
        style="@style/Smile_Button_theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_data" />

    <Button
        android:id="@+id/btn_edit_password"
        style="@style/Smile_Button_logout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/edit_password" />

    <RelativeLayout
        android:id="@+id/layout_black_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            style="@style/Smile_TextView_Black"
            android:layout_centerInParent="true"
            android:text="@string/black_tips"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>